--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -53,8 +53,9 @@ body {
 .dashboard {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   margin-top: 3em;
+  margin-left: 6em;
 }
 
 .button-container {
@@ -64,14 +65,18 @@ body {
 
 .dashboard-button {
   padding: 20px;
-  background-color: #007bff;
-  color: white;
+  background-color: none;
+  color: #000;
+  font-weight: 500;
+  font-family: "Work Sans";
+  font-size: 1.3em;
   border: none;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
   cursor: pointer;
+  margin-left: 0.5em;
   transition: background-color 0.3s ease;
 }
 
@@ -81,9 +86,12 @@ body {
 
 .button-icon {
   font-size: 24px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
+  margin-bottom: 0.9em;
 }
 
 .button-text {
-  font-size: 16px;
+  font-weight: 500;
+  font-family: "Work Sans";
+  display: unset;
 }
