--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,22 +17,43 @@
       <div class="user-info">
         <i class="fas fa-user-circle fa-2x"></i>
         <h2>{{ username }}</h2>
-        <button class="btn btn-success" (click)="logout()">Logout</button>
+        <button (click)="logout()" *ngIf="authservice.isLoggedIn()">
+          Logout
+        </button>
       </div>
     </div>
 
     <div class="dashboard">
       <div class="button-container">
         <button class="dashboard-button" (click)="showUserList()">
-          <i class="fas fa-users button-icon"></i>
+          <img
+            src="https://lirp.cdn-website.com/519d3ac1/dms3rep/multi/opt/sms-color-1920w.png"
+            alt=""
+            id="1952073423"
+            class="button-icon"
+            data-dm-image-path="https://irp.cdn-website.com/519d3ac1/dms3rep/multi/sms-color.png"
+            onerror="handleImageLoadError(this)"
+            style="object-fit: cover; width: 100%; height: 100%"
+          />
+          <!-- <i class="fas fa-users button-icon"></i> -->
           <span class="button-text">User List</span>
         </button>
+
         <button
           class="dashboard-button"
           *ngIf="isAgent() || isAdmin()"
           (click)="startChat()"
         >
-          <i class="fas fa-comments button-icon"></i>
+          <img
+            src="https://lirp.cdn-website.com/519d3ac1/dms3rep/multi/opt/chat-color-1920w.png"
+            alt=""
+            id="1014756893"
+            class="button-icon"
+            data-dm-image-path="https://irp.cdn-website.com/519d3ac1/dms3rep/multi/chat-color.png"
+            onerror="handleImageLoadError(this)"
+            style="object-fit: cover; width: 100%; height: 100%"
+          />
+          <!-- <i class="fas fa-comments button-icon"></i> -->
           <span class="button-text">Chat</span>
         </button>
       </div>
