--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,6 @@
   <div class="user-info">
     <i class="fas fa-user-circle fa-2x"></i>
     <h2>{{ loginUserName }}</h2>
-    <button (click)="logout()">Logout</button>
+    <button (click)="logout()" class="btn">Logout</button>
   </div>
 </div>
